--- a/index.html
+++ b/index.html
@@ -6,20 +6,18 @@
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
 
-    <title>Сөзділ</title>
+    <title>Tapkyr</title>
 </head>
 <body>
 <header>
     <nav  class="nav-bar">
         <div style="display:flex">
-            <img src="./kazakhstan.png" alt="ту">
-            <h1><a href="index.html" style="text-decoration: none; color:white">Сөзділ</a></h1>
+
+            <h1><a href="index.html" style="text-decoration: none; color:white">Tapkyr</a></h1>
         </div>
         <div>
             <ul style="list-style: none; display: flex">
                 <li><span class="rules" onclick="a()">Ойын ережесі</span></li>
-                <li><span style="cursor: pointer">Біз жайлы</span></li>
-                <li><span style="cursor: pointer">Шығу</span></li>
             </ul>
         </div>
     </nav>
@@ -111,7 +109,7 @@
         <button class="key" data-key="Ь">Ь</button>
         <button class="key" data-key="Б">Б</button>
         <button class="key" data-key="Ю">Ю</button>
-        <button data-enter class="key large">Еңгізу</button>
+        <button data-enter class="key large">Енгізу</button>
 
     </div>
 
